# telegram-expenses-bot

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
app/: auth.py  database.py  db.py  main.py  parser.py
app/models/: __init__.py  expense.py  user.py
bot-service/: .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  start_server.sh
bot-service/app/: auth.py  main.py  parser.py
bot-service/app/models/: __init__.py  api_key.py  base.py  user.py
bot-service/app/schemas/: __init__.py  user_message.py
bot-service/migrations/: env.py
bot-service/migrations/versions/: 2025-02-23T21:34:30_create_api_key_table.py
connector-service/: .env.example  Dockerfile  bot.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json
connector-service/src/: bot.ts  config.ts  expenseHandler.ts
migrations/versions/: 2025-02-23T17:10:54_create_users_and_expenses_tables.py
scripts/: start_database.sh  stop_database.sh
