[project]
name = "bot-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "langchain>=0.3.19",
    "langchain-ai21>=1.0.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
